--- a/.github/workflows/vite-ts.yml
+++ b/.github/workflows/vite-ts.yml
@@ -37,6 +37,8 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm ci
+      - name: Go to working dir
+        run: cd my-pages
       - name: Build
         run: npm run build
       - name: Setup Pages
